<resources>
    <string name="hello">Hello World, OhFarkActivity!</string>
    <string name="app_name">OhFark</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="dialog_message_rate">Rate </string>
    <string name="dialog_message">We love feedback, we love constructive feedback even more. Let us know what you think. Rate OhFark now?</string>
    <string name="dialog_message_yes">Yes</string>
    <string name="dialog_message_not_now">Not Now</string>
    <string name="dialog_message_never">Never</string>
    <string name="dialog_message_no_gp">You do not have Google Play installed</string>
    <string name="disclaimer">All other logos and trademarks are the property of the respective trademark owners. \u00ae and \u2122 denote registered trademarks in the United States and other countries</string>
    <string name="stCompany">South Bound Apps</string>
    <string name="stWWW">http://www.soboapps.com</string>
    <string name="stAbout_lr">OhFark 2.0.16 \u00A9 2016</string>
    <string name="stSlogan">OhFark, Fun for the Entire Family!</string>
    <string name="stDonate">Donate</string>
    <string name="donate1">Donate $1</string>
    <string name="stAbout">About</string>
    <string name="stCredits">Credits: Based on an open source project by mikgonz!</string>
    <string name="stPlayer1">Player 1</string>
    <string name="stPlayer2">Player 2</string>
    <string name="stPlayer3">Player 3</string>
    <string name="stPlayer4">Player 4</string>
    <string name="stMachine">Machine</string>
    <string name="stPlayer1Score">0</string>
    <string name="stPlayer2Score">0</string>
    <string name="stPlayer3Score">0</string>
    <string name="stPlayer4Score">0</string>
    <string name="stDieScore"> 0</string>
    <string name="stNumFarkles">You have 0 Farkles in a row</string>
    <string name="stCurrentScore">Dice Score:</string>
    <string name="stRoll">ROLL</string>
    <string name="stPass">PASS</string>
    <string name="stScore">SCORE</string>
    <string name="stPoints">SCORE</string>
    <string name="stNewGame">New Game</string>
    <string name="stPlayAgainTitle">Play Again?</string>
    <string name="stYes">Yes</string>
    <string name="stOptions">Options</string>
    <string name="stHelp">Help</string>
    <string name="stExit">Exit</string>
    <string name="stDie1">Die1</string>
    <string name="stDie2">Die2</string>
    <string name="stDie3">Die3</string>
    <string name="stDie4">Die4</string>
    <string name="stDie5">Die5</string>
    <string name="stDie6">Die6</string>
    <string name="stScoring">How to Score</string>
    <string name="app_label">OhFarkle</string>
    <string name="buttonHandler">buttonClickEvent</string>
    <string name="btnRollClick">HandleRoll</string>
    <string name="startButtonHandler">buttonStartClick</string>
    <string name="HowToPlay">OhFark is played by one or two players, with each player in succession having a turn at throwing the dice. Each player\0027s turn results in a score, and the scores for each player accumulate to a winning total of 1000 - 10,000.</string>
    <string name="Rules">At the beginning of each turn, the player rolls dice.  After each roll, one or more scoring dice must be selected.  The player may then either end their turn and bank the score accumulated so far, or continue rolling the dice.  If the player has scored all six dice, they have \022Hot Dice\022 and may continue their turn with a new roll of all six dice, adding to the score they have already accumulated.  There is no limit to the number of \022Hot Dice\022 a player may roll in one turn.  If none of the dice score in any given throw, the player has \022FARKLED\022 and all points for that turn are lost.  At the end of the player\0027s turn, the next player has their turn.  Once a player has achieved a winning point total, each other player has one last turn to score enough points to surpass that high-score.</string>
    <string name="scoring_handler">scoringClick</string>
    <string name="ChooseGame">Choose a New Game Type</string>
    <string name="OnePlayer">One Player</string>
    <string name="TwoPlayer">Two Player</string>
    <string name="Cancel">Cancel</string>
    <string name="PlayerScore">Player 1 Score\003A 0 \nPlayer 2 Score\oo3A: 0</string>
    <string name="LandPlayerScore">Player 1 Score\003A 0     Player 2 Score\oo3A: 0</string>
    <string name="stFinalRound">Last Chance</string>
    <string name="stDiceScore">Dice Score\: </string>
    <string name="stWinner">Winner\: 0</string>
    <string name="stWinnerButton">WINS</string>
    <string name="stWaitButton">Wait</string>
    <string name="stQuit">Quit!</string>
    <string name="stPlayAgain">Play Again!</string>
    <string name="stPlay">Play</string>
    <string name="stClose">Close</string>
    <string name="activity_new_message">Back</string>
    <string name="stLword0">Congrats  </string>
    <string name="stLword1">Are you kidding me  </string>
    <string name="stLword2">And the Winner is \.  </string>
    <string name="stLword3">WOW,  </string>
    <string name="stLword4">I can\'t believe it  </string>
    <string name="stRword0">  you won!</string>
    <string name="stRword1">  remember, every dog has it\'s day!</string>
    <string name="stRword2">  you should go pro!</string>
    <string name="stRword3">  you had better check yourself!</string>
    <string name="stRword4">  you are so lucky!"</string>
    <string name="stGameOver">Game Over!</string>
    <string name="stYouHave">You have </string>
    <string name="stFarkles"> Farkles in a row</string>
    <string name="stOverLayMvsA">\n\nWe have added a "Single Player Mode". :-) \n\nHuman vs Android is a new feature and may contain bugs.\n\nPlease submit all issues to soboapps@gmail.com\n\n\nTap to continue</string>
    <string name="stNumberPlayers">Number of Players</string>
    <string name="stHowManyPlayers">How many players?</string>
    <string name="stPlayerSetup">Player Setup</string>
    <string name="stPlayerNames">Player Names</string>
    <string name="stPlayer1Setup">Player 1 Setup</string>
    <string name="stSetupFirstPlayer">Setup the First Player</string>
    <string name="stEnterFirstPlayerName">Enter the First Players Name</string>
    <string name="stSecondPlayerSetup">Player 2 Setup</string>
    <string name="stSetupSecondPlayer">Setup the Second Player</string>
    <string name="stEnterSecondPlayerName">Enter the Second Players Name</string>
    <string name="stIsSecondPlayerHumanBeta">Is the Second Player Human (Beta)</string>
    <string name="stIsSecondPlayerHuman">Is the Second Player Human</string>
    <string name="stSeconPlayerNotHuman">Second Player is Not Human</string>
    <string name="stSeconPlayerHuman">Second Player is Human</string>
    <string name="stPlayer3etup">Player 3 Setup</string>
    <string name="stSetupThirdPlayer">Setup the Third Player</string>
    <string name="stEnterThirdPlayerName">Enter the Third Players Name</string>
    <string name="stPlayer4Setup">Player 4 Setup</string>
    <string name="stSetupFourPlayer">Setup the Fourth Player</string>
    <string name="stEnterFourPlayerName">Enter the Fourth Players Name</string>
    <string name="stNotHumanCS">Human vs Android (Coming Soon)</string>
    <string name="stNotHumanBeta">Human vs Android (Beta)</string>
    <string name="stNotHuman">Human vs Android</string>
    <string name="stDifficultyOfAndroidBeta">Difficulty of Android Player (Beta)</string>
    <string name="stDifficultyOfAndroid">Difficulty of Android Player</string>
    <string name="stDefaultEasy">Easy</string>
    <string name="stResetOptions">Reset All Options</string>
    <string name="stOptionsReset">Options Reset</string>
    <string name="stConfigOptions">Configure Scoring Options</string>
    <string name="stFlipScreen">Flip the Screen</string>
    <string name="stDoNotFlip">Do Not Flip the Screen</string>
    <string name="stFlipTheScreen">Flip the Screen</string>
    <string name="stThreePlayerFlip">3 Player Flip Pattern</string>
    <string name="stNeverShowAgain">Never Show Again</string>
    <string name="stSoundFX">Sound FX</string>
    <string name="stSoundOff">Sound is Off</string>
    <string name="stSoundOn">Sound is On</string>
    <string name="stPlayNow">Play Now</string>
    <string name="stScoringOptions">Scoring Options</string>
    <string name="stWinningScore">Winning Score</string>
    <string name="stHowManyPoints">How many points will it take to Win?</string>
    <string name="stGOB">Get-On-Board Score</string>
    <string name="stHowManyToGOB">How many points required to Get-On-Board?</string>
    <string name="stThreeFarkPenaltyOptions">3 Farkle penalty options</string>
    <string name="stThreeFarkInRow">3 Farkles in-a-row penalty</string>
    <string name="stThreeFarkInRowCheckBox">3 Farkles in-a-row penalty</string>
    <string name="stThreeFarkPenaltyOff">No penalty for 3 Farkles in-a-row</string>
    <string name="stThreeFarkPenaltyOn">Penalty for 3 Farkles in-a-row</string>
    <string name="stThreeFarkNegativeScoreCheckBox">Negative Score?</string>
    <string name="stThreeFarkNegativeOff">Negative Score Allowed</string>
    <string name="stThreeFarkNegativeOn">Score will not go below 0</string>
    <string name="stThreeFarkPenaltyPoints">Farkle Penalty Points</string>
    <string name="stThreeFarkPenaltyHowManyPoints">How many points for a Farkle Penalty?</string>
    <string name="stScoreOnePair">Score on One Pair</string>
    <string name="stNoScoreSinglePair">No score for remaining Single Pair</string>
    <string name="stScoreSinglePair">Remaining Single Pair will score</string>
    <string name="stThreePair">Three Pair</string>
    <string name="stThreePairPoints">How many points is Three Pair worth?</string>
    <string name="stFourOfKind">Four of A Kind</string>
    <string name="stFourOfKindPoints">How many points is Four of a Kind worth?</string>
    <string name="stFourOfKind2XValue">2x the 3 Of A Kind Value</string>
    <string name="stFiveOfKind">Five of A Kind</string>
    <string name="stFiveOfKindPoints">How many points is Five of a Kind worth?</string>
    <string name="stFiveOfKind3XValue">3x the 3 Of A Kind Value</string>
    <string name="stSixOfKind">Six of A Kind</string>
    <string name="stSixOfKindPoints">How many points is Six of a Kind worth?</string>
    <string name="stSixOfKind4XValue">4x the 3 Of A Kind Value</string>
    <string name="stSixOnes">Six One\'s</string>
    <string name="stSixOnesPoints">How many points are Six One\'s worth?</string>
    <string name="stScoreAStraight">Score a Straight</string>
    <string name="stScoreStraightOff">A Straight will not earn any points</string>
    <string name="stScoreStraightOn">A Straight will earn points specified</string>
    <string name="stAStraight">A Straight</string>
    <string name="stAStraightPoints">How many points for a Straight?</string>
    <string name="stTwoThreeOfKindScore">2, 3 of a Kind Scoring</string>
    <string name="stTwoThreeOfKindSetPointsOff">Rolling 2, 3 of a kind will earn the sum of the 2, 3 of a Kind</string>
    <string name="stTwoThreeOfKindSetPointsOn">Rolling 2, 3 of a kind will earn a set amount of points</string>
    <string name="stTwoThreeOfKindValue">2, 3 of a Kind Points Value</string>
    <string name="ststTwoThreeOfKindWorth">How many points are 2, 3 of a kind worth?</string>
</resources>