<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="playerPrefs"
    android:title="@string/stPlayerSetup">

    <PreferenceCategory
        android:title="@string/stNumberPlayers"
        android:key="NumPref">

    <ListPreference
        android:title="@string/stHowManyPlayers"
        android:key="playerNumPref"
        android:defaultValue="2"
        android:entries="@array/num_players_Array"
        android:entryValues="@array/num_players_Array" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/stPlayerNames"
        android:key="NamePref">

             <EditTextPreference
                android:title="@string/stEnterFirstPlayerName"
                android:defaultValue="@string/stPlayer1"
                android:selectAllOnFocus="true"
                android:maxLength="10"
                android:key="player1NamePref" />

             <EditTextPreference
                android:id="@+id/second_player"
                android:title="@string/stEnterSecondPlayerName"
                android:defaultValue="@string/stPlayer2"
                android:selectAllOnFocus="true"
                android:maxLength="10"
                android:enabled="true"
                android:key="player2NamePref" />

            <EditTextPreference
                android:title="@string/stEnterThirdPlayerName"
                android:defaultValue="@string/stPlayer3"
                android:selectAllOnFocus="true"
                android:maxLength="10"
                android:enabled="true"
                android:key="player3NamePref" />

            <EditTextPreference
                android:title="@string/stEnterFourPlayerName"
                android:defaultValue="@string/stPlayer4"
                android:selectAllOnFocus="true"
                android:maxLength="10"
                android:enabled="true"
                android:key="player4NamePref" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="IsHumanPref"
        android:title="@string/stNotHumanBeta">

        <CheckBoxPreference
            android:id="@+id/human_player"
            android:enabled="true"
            android:title="@string/stIsSecondPlayerHuman"
            android:defaultValue="true"
            android:summaryOff="@string/stSeconPlayerNotHuman"
            android:summaryOn="@string/stSeconPlayerHuman"
            android:key="player2IsHumanPref"
            android:disableDependentsState="true"
            android:onClick="itemClicked" />

        <ListPreference
            android:title="@string/stDifficultyOfAndroid"
            android:key="player2DiffPref"
            android:defaultValue="@string/stDefaultEasy"
            android:entries="@array/difficulty_Array"
            android:entryValues="@array/difficulty_Array"
            android:dependency="player2IsHumanPref" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/stNewGame">
        <Preference
            android:key="scorePrefs"
            android:title="@string/stConfigOptions"/>

        <Preference
            android:title="@string/stPlayNow"
            android:key="playPref"
            android:enabled="true" />
    </PreferenceCategory>



</PreferenceScreen>
