<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item    
    	android:id="@+id/menuNewGame"
    	android:alphabeticShortcut="n"
    	android:title="@string/stNewGame"
    	android:icon="@drawable/ic_menu_newgame" />	
	
	<item    
    	android:id="@+id/menuOptions"
    	android:alphabeticShortcut="o"
    	android:title="@string/stOptions"
    	android:icon="@drawable/ic_menu_settings" />	  
	
	<item    
    	android:id="@+id/menuHelp"
    	android:alphabeticShortcut="h"
    	android:title="@string/stHelp"
    	android:icon="@drawable/ic_menu_help" />
		
	<item    
    	android:id="@+id/menuExit"
    	android:alphabeticShortcut="x"
    	android:title="@string/stExit"
    	android:icon="@drawable/ic_menu_exit" />
	
	<item    
    	android:id="@+id/menuAbout"
    	android:alphabeticShortcut="a"
    	android:icon="@drawable/ic_menu_about"
    	android:title="@string/stAbout"	/>
	  	
<!-- Would like to have select-able icons on Action Bar 
	 to turn Sound and Flip Screen Options On an Off
	      	
	<item    
    	android:id="@+id/menuSound"
    	android:alphabeticShortcut="s"
    	android:title="@string/stHelp"
    	android:icon="@drawable/ic_sound"
        android:showAsAction="ifRoom" />
		
	<item    
    	android:id="@+id/menuFlip"
    	android:alphabeticShortcut="f"
    	android:title="@string/stHelp"
    	android:icon="@drawable/ic_flip"
        android:showAsAction="ifRoom" />
-->
</menu>    